# python-project-52

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: my_workflow.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
task-manager/: .gitignore  Dockerfile
task-manager/task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/: manage.py  pyproject.toml  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_label_created_at_and_more.py  0003_alter_label_options_alter_label_created_at_and_more.py
task_manager/statuses/: apps.py  asgi.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py  0003_alter_status_options_alter_status_created_at_and_more.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_author_and_more.py  0002_task_labels.py  0003_alter_task_options_alter_task_author_and_more.py  0004_alter_task_author.py  0005_rename_user_task_executor.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: label_confirm_delete.html  label_form.html  label_list.html
task_manager/templates/statuses/: status_confirm_delete.html  (+2 more)
task_manager/users/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
(+14 files in other folders)
