[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-bootstrap5",
    "django-filter>=25.2",
    "gunicorn",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rollbar>=1.3.0",
    "dj-database-url>=2.1.0",
]